推进时间逻辑

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -1,4 +1,5 @@
 "addon"
 {
     "defend_success" "Defend Success! Turn to the next road section!"
+    "push_remain_30"    "30 seconds left to push!"
 }
