--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -1,5 +1,6 @@
 "addon"
 {
     "defend_success" "防守成功！进入下一路段！"
-    "push_remain_30" "推进时间还剩30秒！"
+    "push_remain_30" "推进时间即将结束！"
+    "start_defend"  "即将开始防守运输车！"
 }
