--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -3,4 +3,7 @@
     "defend_success" "防守成功！进入下一路段！"
     "push_remain_30" "推进时间即将结束！"
     "start_defend"  "即将开始防守运输车！"
+    "push_time_remain"  "推进时间"
+    "start_transport"  "开 始 运 输 !"
+    "glhf"  "祝大家好运，玩的开心!"
 }
