运输车出生信号提示

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -6,4 +6,6 @@
     "push_time_remain"  "Push Time"
     "start_transport"  "Start Transport!"
     "glhf"  "Good Luck Have Fun !"
+    "player_prepare"  "Prepare to battle !"
+    "car_spawn"  "Transport car will be spawned !"
 }
