--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -10,4 +10,5 @@
     "car_spawn"  "Transport car will be spawned !"
     "ability_selector_title"    "Talent Ability Selector"
     "random_one"    "Random Talent"
+    "all_talent_abilities"  "All Talent Abilities"
 }
