--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -10,4 +10,5 @@
     "car_spawn"  "运输车将于信号点出生！"
     "ability_selector_title"    "天赋技能选择"
     "random_one"    "随机天赋"
+    "all_talent_abilities"  "所有天赋技能"
 }
