添加天赋药水

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -11,4 +11,5 @@
     "ability_selector_title"    "Talent Ability Selector"
     "random_one"    "Random Talent"
     "all_talent_abilities"  "All Talent Abilities"
+    "cancel_change" "Cancel"
 }
