--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -11,4 +11,5 @@
     "ability_selector_title"    "天赋技能选择"
     "random_one"    "随机天赋"
     "all_talent_abilities"  "所有天赋技能"
+    "cancel_change" "取消"
 }
