完善加时机制及显示

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -12,4 +12,5 @@
     "random_one"    "Random Talent"
     "all_talent_abilities"  "All Talent Abilities"
     "cancel_change" "Cancel"
+    "overtime"  "Overtime!"
 }
