--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -1,7 +1,7 @@
 "addon"
 {
     "defend_success" "Defend Success! Turn to the next road section!"
-    "push_remain_30"    "Push time is coming to an end!"
+    "push_time_to_end"    "Push time is about to end!"
     "start_defend"  "Start defending the transporter!"
     "push_time_remain"  "Push Time"
     "start_transport"  "Start Transport!"
