结束面板增加一个推进得分项

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -13,12 +13,11 @@
     "all_talent_abilities"  "All Talent Abilities"
     "cancel_change" "Cancel"
     "overtime"  "Overtime!"
-    "new_stat_gpm"												"GPM"
-    "new_stat_total_damage"										"Total damage"
-    "new_stat_total_healing"									"Total healing"
-    "new_stat_networth"											"Networth"
-    "new_stat_wards"											"Wards sentries/obsrvrs"
-    "new_stat_killed_heroes"									"Killed enemies"
+    "new_stat_push_score"           "Push score"
+    "new_stat_total_damage"			"Total damage"
+    "new_stat_total_healing"		"Total healing"
+    "new_stat_networth"				"Networth"
+    "new_stat_wards"				"Wards sentries/obsrvrs"
+    "new_stat_killed_heroes"		"Killed enemies"
     "custom_end_screen_team_kills"  "Team total Kills"
-    "custom_end_screen_remaining_gold"   "Remaining gold"
 }
