特效背包壳子

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -21,4 +21,5 @@
     "new_stat_killed_heroes"		"Killed enemies"
     "custom_end_screen_team_kills"  "Team total Kills"
     "cant_use"  "Can not use !"
+    "effect_box"   "Effect Box"
 }
