天赋技能面板移位

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -22,4 +22,5 @@
     "custom_end_screen_team_kills"  "Team total Kills"
     "cant_use"  "Can not use !"
     "effect_box"   "Effect Box"
+    "close"     "Close"
 }
