特效选择面板

--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -23,4 +23,16 @@
     "cant_use"  "Can not use !"
     "effect_box"   "Effect Box"
     "close"     "Close"
+    "effect_bee_flying"     "Bee Flying"
+    "effect_blue_fire"      "Blue Fire"
+    "effect_cave_crystal"   "Cave Crystal"
+    "effect_christmas"      "Christmas"
+    "effect_darkmoon"       "Darkmoon"
+    "effect_desert_sands"   "Desert Sands"
+    "effect_frost"          "Frost"
+    "effect_golden_fire"    "Golden Fire"
+    "effect_green_fire"     "Green Fire"
+    "effect_pink_memories"  "Pink Memories"
+    "effect_red_fire"       "Red Fire"
+    "effect_void_mist"      "Void Mist"
 }
