--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -23,4 +23,16 @@
     "cant_use"  "无法使用！"
     "effect_box"   "特效背包"
     "close"     "关闭"
+    "effect_bee_flying"     "野蜂飞舞"
+    "effect_blue_fire"      "苍蓝之焰"
+    "effect_cave_crystal"   "岩洞水晶"
+    "effect_christmas"      "圣诞礼物"
+    "effect_darkmoon"       "暗月之裔"
+    "effect_desert_sands"   "荒漠风沙"
+    "effect_frost"          "冰霜寒气"
+    "effect_golden_fire"    "黄金之焰"
+    "effect_green_fire"     "幽冥之焰"
+    "effect_pink_memories"  "粉红回忆"
+    "effect_red_fire"       "沸血之焰"
+    "effect_void_mist"      "虚空迷雾"
 }
