--- a/panorama/localization/addon_english.txt
+++ b/panorama/localization/addon_english.txt
@@ -35,13 +35,13 @@
     "effect_pink_memories"  "Pink Memories"
     "effect_red_fire"       "Red Fire"
     "effect_void_mist"      "Void Mist"
-    "effect_ti10_effect"      "TI10 Emblem"
-    "effect_ti9_effect"      "TI9 Emblem"
-    "effect_ti8_effect"      "TI8 Emblem"
-    "effect_ti7_effect"      "TI7 Emblem"
+    "effect_ti10_effect"      "Holy Emblem"
+    "effect_ti9_effect"      "Jungle Emblem"
+    "effect_ti8_effect"      "Spar Emblem"
+    "effect_ti7_effect"      "Sea Emblem"
     "effect_ti6_radiance"      "Blood Radiance"
     "effect_ti7_radiance"      "Sea Radiance"
     "effect_ti8_radiance"      "Spar Radiance"
     "effect_ti9_radiance"      "Jungle Radiance"
-    "effect_ti10_radiance"      "Shining Radiance"
+    "effect_ti10_radiance"      "Holy Radiance"
 }
