--- a/panorama/localization/addon_schinese.txt
+++ b/panorama/localization/addon_schinese.txt
@@ -35,13 +35,13 @@
     "effect_pink_memories"  "粉红回忆"
     "effect_red_fire"       "沸血之焰"
     "effect_void_mist"      "虚空迷雾"
-    "effect_ti10_effect"      "TI10纹章"
-    "effect_ti9_effect"      "TI9纹章"
-    "effect_ti8_effect"      "TI8纹章"
-    "effect_ti7_effect"      "TI7纹章"
+    "effect_ti10_effect"      "神圣纹章"
+    "effect_ti9_effect"      "雨林纹章"
+    "effect_ti8_effect"      "晶石纹章"
+    "effect_ti7_effect"      "深海纹章"
     "effect_ti6_radiance"      "血色光辉"
     "effect_ti7_radiance"      "深海光辉"
     "effect_ti8_radiance"      "晶石光辉"
-    "effect_ti9_radiance"      "密林光辉"
-    "effect_ti10_radiance"      "闪耀光辉"
+    "effect_ti9_radiance"      "雨林光辉"
+    "effect_ti10_radiance"      "神圣光辉"
 }
